Comment out sensor types for safety on fly gemini

--- a/fly_gemini/voron_0/printer.cfg
+++ b/fly_gemini/voron_0/printer.cfg
@@ -203,7 +203,7 @@ step_pulse_duration: 0.0000004  ## This value of Fly-Gemini is recommended to be
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PA0
-sensor_type: EPCOS 100K B57560G104F                                 # Adjust for your hotend thermistor. See 'sensor types' list at end of file
+#sensor_type: EPCOS 100K B57560G104F                                 # Adjust for your hotend thermistor. See 'sensor types' list at end of file
 sensor_pin: PC0
 #control: pid
 #pid_Kp: 22.2
@@ -236,7 +236,7 @@ stealthchop_threshold: 0
 
 [heater_bed]
 heater_pin: PA2
-sensor_type: NTC 100K MGB18-104F39050L32                            # For Keenovo, verify yours
+#sensor_type: NTC 100K MGB18-104F39050L32                            # For Keenovo, verify yours
 sensor_pin: PC2
 smooth_time: 3.0
 #max_power: 0.6                                                     # Only needed for 100w pads
