--- a/fly_gemini_v2/printer.cfg
+++ b/fly_gemini_v2/printer.cfg
@@ -145,8 +145,8 @@ step_pin: E_STEP
 dir_pin: E_DIR                                                        # Add ! if moving opposite direction
 enable_pin: !E_EN
 full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
-rotation_distance: 4.637 #22.23                                            # See calibrating rotation_distance on extruders doc
-#gear_ratio: 50:10                                                   # For Mini Afterburner
+rotation_distance: 22.23                                            # See calibrating rotation_distance on extruders doc
+gear_ratio: 50:10                                                   # For Mini Afterburner
 microsteps: 16
 nozzle_diameter: 0.400
 filament_diameter: 1.750
